--- a/react-app/src/App.scss
+++ b/react-app/src/App.scss
@@ -1,8 +1,7 @@
 .App {
   text-align: center;
-  &-logo {
 
-  }
+  &-logo {}
 }
 
 
@@ -31,7 +30,13 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.main {
+  display: flex;
+  justify-content: center;
 }
